# coursework-6

./: .env.sample  .gitignore  README.md  pyproject.toml
all_data/: blog_data.json  newsletter_data.json  users_data.json
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  blog_main_page.html
config/: settings.py  urls.py
newsletter_app/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
newsletter_app/migrations/: 0001_initial.py  0002_initial.py  0003_alter_newsletteroptions_first_send_date_and_more.py  0004_alter_newsletteroptions_first_send_date_and_more.py
newsletter_app/templates/newsletter_app/: admin_main.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  cuts.html  main_page.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  newsletteroptions_confirm_delete.html  newsletteroptions_detail.html  newsletteroptions_form.html  newsletteroptions_list.html  sign_in_page.html  trysend_list.html
newsletter_app/templatetags/: my_tags.py
static/css/: bootstrap.min.css
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/registration/: login.html
users/templates/users/: password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  passwrd_reset_complete.html  user_confirm_delete.html  user_form.html  user_list.html
(+5 files in other folders)
